--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "moment": "^2.29.4",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^8.0.5",
